--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,3 +10,7 @@ spring:
   threads:
     virtual:
       enabled: true
+  datasource:
+    url: ${SPRING_DATASOURCE_URL}
+    username: ${SPRING_DATASOURCE_USERNAME}
+    password: ${SPRING_DATASOURCE_PASSWORD}
