--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,29 +2,30 @@ services:
   # ------------------------------------------------
   # CONTAINER DA API (SPRING BOOT)
   # ------------------------------------------------
-  api:
-    build:
-      context: processo-seletivo-api
-      dockerfile: Dockerfile
-    container_name: processo-seletivo-api
-    ports:
-      - "8080:8080"
-    environment:
-      # Spring Boot
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresql:5432/${DB_MAIN}
-      SPRING_DATASOURCE_USERNAME: ${DB_USER}
-      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
-      # Min.IO
-      MINIO_URL: http://minio:9000
-      MINIO_ACCESS_KEY: ${MINIO_USER}
-      MINIO_SECRET_KEY: ${MINIO_PASSWORD}
-    networks:
-      - seletivo-network
-    depends_on:
-      postgresql:
-        condition: service_healthy
-      minio:
-        condition: service_healthy
+#  api:
+#    build:
+#      context: api
+#      dockerfile: Dockerfile
+#    container_name: processo-seletivo-api
+#    ports:
+#      - "8080:8080"
+#    environment:
+#      # Spring Boot
+#      SPRING_DATASOURCE_URL: jdbc:postgresql://postgresql:5432/${DB_MAIN}
+#      SPRING_DATASOURCE_USERNAME: ${DB_USER}
+#      SPRING_DATASOURCE_PASSWORD: ${DB_PASSWORD}
+#      # Min.IO
+#      APP_MINIO_ENDPOINT: ${MINIO_URL}
+#      APP_MINIO_ACCESSKEY: ${MINIO_USER}
+#      APP_MINIO_SECRETKEY: ${MINIO_PASSWORD}
+#      APP_MINIO_BUCKETNAME: ${MINIO_BUCKETNAME}
+#    networks:
+#      - seletivo-network
+#    depends_on:
+#      postgresql:
+#        condition: service_healthy
+#      minio:
+#        condition: service_healthy
   # ------------------------------------------------
   # CONTAINER MIN.IO - OBJECT STORAGE SYSTEM
   # ------------------------------------------------
