Adicionando configuração para debug e variáveis de ambiente

--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
 # ENVIRONMENT VARIABLES
 
 # MIN.IO
+MINIO_URL=http://minio:9000
 MINIO_USER=minioadmin
-MINIO_PASSWORD=minioadmin  
+MINIO_PASSWORD=minioadmin
+MINIO_BUCKETNAME=processo-seletivo-seplag
 
 # POSTGRESQL
 DB_USER=root
